finished the fourth problem
