# app/Http/Controllers/Api/ProblemController.php
@@ -3,7 +3,9 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use function Termwind\renderUsing;
 
 class ProblemController extends Controller
 {
@@ -112,7 +114,7 @@ class ProblemController extends Controller
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="Returns a user token",
+     *         description="Returns count of all number except numbers that include the digit 5",
      *     ),
      *
      *
@@ -161,7 +163,7 @@ class ProblemController extends Controller
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="Returns a user token",
+     *         description="Returns the alphabetic index of the string",
      *     ),
      *
      *
@@ -192,6 +194,103 @@ class ProblemController extends Controller
         }
         return $sum;
     }
+
+    /**
+     * Fourth problem
+     * @OA\Post(
+     *     path="/problems/fourth",
+     *     tags={"problems"},
+     *     summary="Fourth problem",
+     *     @OA\RequestBody(
+     *         required=true,
+     *     @OA\JsonContent(
+     *          @OA\Property(property="N", type="integer",example="1"),
+     *          @OA\Property(property="Q", type="array",
+     *          @OA\Items(
+     *               type="integer"
+     *     ),
+     *     ),
+     *     )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Success",
+     *     ),
+     *
+     *
+     *     @OA\Response(
+     *         response=422,
+     *         description="Validation error/missing parameters",
+     *     @OA\JsonContent(
+     *          @OA\Property(property="message", type="string",example="The provided credentials are incorrect."),
+     *     )
+     *     ),
+     *
+     * )
+     * @param Request $request
+     * @return array|JsonResponse
+     */
+    public function fourth(Request $request)
+    {
+
+        $N = $request->get('N');
+        $Q = $request->get('Q');
+
+        if (count($Q) == $N) {
+            $movesArr = [];
+
+            foreach ($Q as $x) {
+                $moves = 0;
+                while ($x > 0){
+                    $x = $this->minimizeInteger($x);
+                    $moves++;
+                }
+                array_push($movesArr, $moves);
+            }
+
+            return $movesArr;
+
+
+        } else {
+            return new JsonResponse(['message' => "The size of the array Q does not equal N."], 422);
+        }
+    }
+
+    public function minimizeInteger($x)
+    {
+//        $counter = 0;
+
+        if (!$this->is_prime($x)) {
+//            $counter++;
+//            print_r($counter);
+            $startingDivider = 2;
+            while ($startingDivider<$x){
+                if ($x % $startingDivider==0){
+                    $x = $x / $startingDivider;
+                    return $x;
+                }
+                else{
+                    $startingDivider++;
+                }
+            }
+        } else {
+            $x--;
+            return $x;
+        }
+    }
+
+    function is_prime($num)
+    {
+        if ($num == 1)
+            return 0;
+        for ($i = 2; $i <= $num/2; $i++)
+        {
+            if ($num % $i == 0)
+                return 0;
+        }
+        return 1;
+    }
+
 
 
 }
